# autograph-rs

./: .gitmodules  .travis.yml  Cargo.toml  NOTES.md  build.rs
autograph/: Cargo.toml  build.rs  hidpi.rc
autograph-derive/: Cargo.toml
autograph-derive/src/: lib.rs
autograph-main/: Cargo.toml
autograph-main/src/: imgui_glue.rs  main.rs  main_loop.rs  renderer_passes.rs
autograph-main/src/passes/: deferred_debug.rs  deferred_render.rs  deferred_setup.rs  mod.rs  present.rs
autograph-style/: Cargo.toml
autograph-style/src/: main.rs
autograph/src/: aabb.rs  cache.rs  camera.rs  framegraph.rs  id_table.rs  image.rs  lazy.rs  lib.rs  mesh.rs  rc_cache.rs  rect_transform.rs  scene_loader.rs  scene_object.rs  shader_compiler.rs  shader_preprocessor.rs  unsafe_any.rs
autograph/src/framegraph/: allocator.rs  compiled.rs  execution.rs  gpu_task.rs  macro_prelude.rs  macros.rs  mod.rs
autograph/src/gfx/: bind.rs  bindable.rs  buffer.rs  buffer_data.rs  context.rs  draw.rs  fence.rs  format.rs  frame.rs  framebuffer.rs  mod.rs  pipeline.rs  queue.rs  render_utils.rs  sampler.rs  shader.rs  shader_compiler.rs  shader_interface.rs  state_cache.rs  state_group.rs  texture.rs  texture_format.rs  upload_buffer.rs  vertex_array.rs
autograph/src/gfx/glsl/: interface.rs  mod.rs  preprocessor.rs  spirv_parse.rs
autograph/src/gfx/spirv/: mod.rs
autograph/src/renderer/: imgui.rs  mod.rs  passes.rs
autograph/src/rendergraph/: interface.rs  mod.rs  types.rs
autograph/src/rendergraph/compiler/: mod.rs  parser.lalrpop  parser.rs  syntax.rs
autograph/tests/: draw.rs  shader_interface.rs
autograph/tests/common/: mod.rs
autograph/tests/interface/: simple.glsl
autograph_codegen/: Cargo.toml
autograph_codegen/src/: lib.rs
data/css/: default.css  default.scss
data/shaders/: Blend.glsli  Blur.glsl  CanvasEval.glsl  CanvasGBuffers.glsl  DeferredDebug.glsl  DeferredGeometry.glsl  DeferredGeometry450.glsl  DrawMesh.glsl  DrawMesh2DColor.glsl  DrawSprite.glsl  DrawTileMap.glsl  DrawWire.glsl  ImageShader.glsli  TAA_Average.glsl  TextureView.glsl  canvas.lua  default.lua  deferred.glsl  gl.lua  imgui.glsl  mesh_shader.glsli  test_graphics.glsl  texture_view.glsl  textured_quad.glsl  tileMap.lua  utils.glsli  utils.lua
data/shaders/gfx/: blitTexture.glsl  blitTexture.pp.glsl
ext/assimp-sys/: .gitignore  .gitmodules  .travis.yml  Cargo.toml  README.md  appveyor.yml  build.rs
ext/assimp-sys/assimp/: .editorconfig  .gitattributes  .gitignore  .travis.yml  AssimpConfig.cmake.in  CodeConventions.md  appveyor.yml  assimp-config.cmake.in  assimp.pc.in
ext/assimp-sys/assimp/code/: BlenderDNA.inl  glTFAsset.inl  glTFAssetWriter.inl
ext/assimp-sys/assimp/contrib/poly2tri/poly2tri/sweep/: sweep_context.cc
ext/assimp-sys/assimp/port/PyAssimp/: setup.py
ext/assimp-sys/assimp/port/PyAssimp/scripts/: 3d_viewer.py
ext/assimp-sys/assimp/samples/SimpleAssimpViewX/SimpleAssimpViewX.xcodeproj/: project.pbxproj
ext/assimp-sys/assimp/scripts/BlenderImporter/: genblenddna.py
ext/assimp-sys/assimp/workspaces/Android-NDK/jni/: Android.mk  Application.mk
ext/assimp-sys/assimp/workspaces/xcode3/assimp.xcodeproj/: project.pbxproj
ext/assimp-sys/assimp/workspaces/xcode6/Assimp.xcodeproj/: project.pbxproj
ext/assimp-sys/assimp/workspaces/xcode6/Assimp.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ext/assimp-sys/assimp/workspaces/xcode6/Assimp.xcodeproj/xcshareddata/xcschemes/: assimp.xcscheme
ext/assimp-sys/src/: anim.rs  camera.rs  cexport.rs  cfileio.rs  cimport.rs  config.rs  importerdesc.rs  lib.rs  light.rs  material.rs  mesh.rs  metadata.rs  postprocess.rs  scene.rs  texture.rs  version.rs
ext/assimp-sys/src/types/: color3.rs  color4.rs  matrix3.rs  matrix4.rs  mod.rs  quaternion.rs  string.rs  vector2.rs  vector3.rs
ext/assimp-sys/tests/: string.rs  version.rs
glmath/: README.md
punchcard/: Cargo.toml  build.rs  hidpi.manifest
punchcard/data/css/: default.css  default.scss
punchcard/examples/: simple_example.rs
punchcard/examples/common/: mod.rs
punchcard/src/: behavior.rs  component.rs  container.rs  css.rs  hit_test.rs  id_stack.rs  id_tree.rs  input.rs  item.rs  layout.rs  lib.rs  main.rs  nanovg_renderer.rs  native_textbox.rs  panel.rs  prelude.rs  renderer.rs  sizer.rs  style.rs  test_ui.rs  ui.rs  vdom.rs
punchcard/src/ui/: container.rs  css.rs  item.rs  layout.rs  mod.rs  renderer.rs  sizer.rs  style.rs  widgets.rs
punchcard/src/widgets/: button.rs  collapsing.rs  floating.rs  mod.rs  panel.rs  scroll.rs  slider.rs  text.rs  text_edit.rs
punchcard/tests/: test_ui.rs
punchcard/tests/common/: mod.rs
rendergraph/: Cargo.toml  lib.rs  types.rs
rendergraph-compiler/: Cargo.toml  build.rs  lib.rs  parser.lalrpop  parser.rs2  syntax.rs
spirv-reflect/: Cargo.toml
spirv-reflect/src/: lib.rs  parse.rs  types.rs
src/: aabb.rs  cache.rs  framegraph.rs  id_table.rs  lib.rs  main.rs  mesh.rs  rc_cache.rs  scene_loader.rs  scene_object.rs  shader_preprocessor.rs  unsafe_any.rs
src/gfx/: bind.rs  buffer.rs  context.rs  fence.rs  frame.rs  mod.rs  pipeline.rs  sampler.rs  shader_preprocessor.rs  state_group.rs  texture.rs  texture_format.rs  upload_buffer.rs  vertex_array.rs
