[package]
name = "autograph"
version = "0.1.0"
authors = ["Alexandre Bléron <alex.bleron@gmail.com>"]


[dependencies]
typed-arena = "1.3.0"
bitflags = "0.9"
lazy_static = "0.2.8"
smallvec = "0.4.1"
libc = "*"
assimp = "*"
nalgebra = "*"
alga = "*"
regex = "0.2.2"
pretty_env_logger = "0.1.1"
log = "0.3.8"
itertools = "*"
vulkano = "*"
vulkano-shaders = "*"
vulkano-shader-derive = "*"
vulkano-win = "*"
winit = "*"
time = "*"
glsl-to-spirv = "*"
rspirv = "*"
spirv_headers = "*"
spirv-reflect = { path = "spirv-reflect" }
petgraph = "*"
gl = "*"
glutin = "*"

[replace]
"assimp-sys:0.2.2" = { path = 'ext/assimp-sys' }
