[package]
name = "autograph"
version = "0.1.0"
authors = ["Alexandre Bléron <alex.bleron@gmail.com>"]
build = "build.rs"

[build-dependencies]
gl_generator = "*"
embed-resource = "*"

[dependencies]
failure = "*"
typed-arena = "1.3.0"
bitflags = "0.9"
lazy_static = "0.2.8"
smallvec = "0.4.1"
libc = "*"
nalgebra = "*"
alga = "*"
regex = "*"
pretty_env_logger = "0.1.1"
log = "0.4.1"
itertools = "*"
winit = "*"
time = "*"
#glsl-to-spirv = "*"
#rspirv = "*"
#spirv_headers = "*"
#spirv-reflect = { path = "../spirv-reflect" }
petgraph = "*"
glutin = "*"
assimp-sys = { git = "https://github.com/Eljay/assimp-sys.git", branch = "vcpkg" }
num-traits = "*"
#flame = "*"
url = "*"
notify = "*"
imgui = "*"
imgui-sys = "*"
serde = "*"
serde_derive = "*"
#lalrpop = "*"
#lalrpop-util = "*"
