[package]
name = "autograph_codegen"
version = "0.1.0"
authors = ["Alexandre Bléron <alex.bleron@gmail.com>"]

[dependencies]
autograph = { path = "../autograph" }
bitflags = "0.9"
lazy_static = "0.2.8"
smallvec = "0.4.1"
libc = "*"
log = "*"
nalgebra = "*"
regex = "0.2.2"
itertools = "*"

[lib]
plugin = true
name = "autograph_codegen"
path = "src/lib.rs"
