[package]
name = "punchcard"
version = "0.1.0"
authors = ["Alexandre Bléron <alex.bleron@gmail.com>"]

[build-dependencies]
embed-resource = "*"

[dependencies]
bitflags = "*"
lazy_static = "*"
smallvec = "*"
pretty_env_logger = "*"
libc = "*"
log = "*"
winit = "*"
glutin = "*"
gl = "*"
failure = "*"
petgraph="*"
cassowary="*"
diff="*"
rand="*"
indexmap="*"
time="*"
num="*"
cssparser="*"
warmy="*"
winapi="*"
user32-sys="*"
kernel32-sys="*"

[dependencies.nanovg]
path = "../ext/nanovg-rs"
features = ["gl3"]

[dependencies.yoga]
path = "../ext/yoga-rs"

