[package]
name = "punchcard"
version = "0.1.0"
authors = ["Alexandre Bléron <alex.bleron@gmail.com>"]

[dev-dependencies]
pretty_env_logger = "*"
gl = "*"

[build-dependencies]
embed-resource = "*"

[dependencies]
bitflags = "*"
lazy_static = "*"
smallvec = "*"
libc = "*"
log = "*"
winit = "0.15"
glutin = "0.15"
failure = "*"
petgraph="*"
rand="*"
indexmap="*"
time="*"
num="*"
cssparser="*"
warmy="*"
winapi="*"
user32-sys="*"
kernel32-sys="*"
euclid="0.17.3"
gleam="*"
rusttype="*"

[dependencies.webrender]
git = "https://github.com/servo/webrender"

[dependencies.yoga]
path = "../ext/yoga-rs"

[dependencies.nanovg]
path = "../ext/nanovg-rs"

