[package]
name = "rendergraph-compiler"
version = "0.1.0"
authors = ["Alexandre Bléron <alex.bleron@gmail.com>"]
build = "build.rs"

[build-dependencies]
gl_generator = "0.5.0"
lalrpop = "*"

[dependencies]
rendergraph = { path = "../rendergraph" }
typed-arena = "1.3.0"
bitflags = "0.9"
lazy_static = "0.2.8"
smallvec = "0.4.1"
libc = "*"
regex = "*"
pretty_env_logger = "0.1.1"
log = "0.3.8"
itertools = "*"
time = "*"
petgraph = "*"
serde = "*"
serde_derive = "*"
lalrpop = "*"
lalrpop-util = "*"
